# docx-template-filler

./: .gitattributes  Cargo.toml  LICENSE  README.md  TODO  example-template.docx  manual.md
locales/cz/: main.ftl
locales/en-US/: main.ftl
locales/ru/: main.ftl
src/: lang.rs  main.rs
src/docx_filler/: mod.rs  validations.rs
src/ui/: consts.rs  mod.rs  options_ui.rs  output_ui.rs  template_ui.rs  tokens_ui.rs  values_ui.rs
