[package]
name = "docx-template-filler"
version = "0.1.0"
authors = ["Jozef Miklos"]
edition = "2018"

[dependencies]

# core deps used by filler
regex = "1.4.1"
thiserror="1.0.21"
zip = "0.5.8"

# UI related deps
native-windows-gui = "1.0.5"
native-windows-derive = "1.0.2"

# localization deps
lazy_static = "1.4.0"
unic-langid = "0.9.0"
fluent-templates = "0.5.16"
